# docusearch

./: .env.example  .gitignore  CHANGELOG.md  README.md  SETUP.md  SUMMARY.md  main.py  pyproject.toml
src/: config.py
src/rag/: __init__.py  cli.py  document_loader.py  extraction.py  rag.py  vector_store.py
src/utils/: __init__.py  logger.py
tests/: test_retrieval.py
